# rust-backend-server-scaffold

./: .env  Cargo.toml  README.md  run.bat
src/: main.rs
src/models/: user.rs
src/routes/: user.rs
