[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
mongodb = "2.3.0"
serde = { version = "1", features = ["derive"] }
tokio = "1.20.1"
tokio-stream = "0.1.9"
futures = "0.3"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
